Adding my experience in Ada Lovelace

--- a/project/index.html
+++ b/project/index.html
@@ -9,16 +9,48 @@ title: Cyril MOINEAU
 		<ul>
     		<li><a href="#Ada">Ada Lovelace 2019</a></li>
     		<li><a href="#Hacka">Hackathon ENSSAT 2019</a></li>
-        	<li><a href="#F4G">F4G</a></li>
+        	<li><a href="#F4G">F4G 2018</a></li>
     		<li><a href="#GitHub">Projet GitHub</a></li>
-    		<li><a href="/project">My completed project</a></li>
     	</ul>
 
-    	<h2 id="Ada">Ada Lovelace (Édition 2019)</h2>
+    	<h2 id="Ada">Ada Lovelace (edition 2019)</h2>
 
 	    	<h3>Description of the projet :</h3>
-	    		The <a href="https://adalovelace.ledantec-numerique.fr/">challenge Ada Lovelace</a> is an computer science
-	    	<h3>My contribution in this project :</h3>
+	    		<p>
+	    			The <a href="https://adalovelace.ledantec-numerique.fr/">challenge Ada Lovelace</a> is an computer science challenge where girls from high school have to create a web site around a topic in a group of 4-5.
+	    			This is project aim to promote the place of women in the numeric world, which is often consider to be man only has shown by statistics :
+	    		</p>
+
+	    		<figure>
+					<img src="/ressources/taux_femmes_ens_sup.png" alt="Taux de Femme en étude Supérieur">
+					<figcaption>Taux de femme en étude supérieur <a href="https://www.education.gouv.fr/cid57096/reperes-et-references-statistiques.html">source</a></figcaption>
+				</figure>
+
+				<p>
+					There is not even 1/3 of women in engineer formation (first line).
+					In order to change things, the <a href="http://lycee-ledantec.fr/">Lycée Le Dantec</a>, the <a href="http://www.enssat.fr/">ENSSAT</a>, <a href="https://www.orange.fr/portail">Orange</a> and <a href="http://www.ellesbougent.com/">Elles Bougent</a> decide to create this event to touch young girls and give them a good first experience of the numeric world. 
+				</p>
+				<p>
+					To achieve this goal, groups are helped by women who are in higher study, this help is mandatory since the schoolgirl have no notion in web. But the tutor also give them an example of woman that work in the numeric, which can break stereotypes.
+				</p>
+
+
+	    	<h3>My contribution to this project :</h3>
+
+	    		<p>
+	    			As a student at <a href="http://www.enssat.fr/">ENSSAT Lannion</a>, I have the opportunitie to participate to projects that aim to create the student life. I have been the coordinator of this project. As explained above, this project have a lot of actors, my goal was to coordinate these actors in order to create a good challenge for the students.
+	    		</p>
+	    		<p>
+	    			For this, I had to manage the student team and help them, I have participate in the creation of the budget for the event, to the sponsoring research and some logistic details. But I also had to work with the others actor and communicate with them, organizing meeting.
+	    		</p>
+	    		<p>
+	    			This project is the first one that made me work with so many differents person, it was really challenging to do it along side with the <a href="#Hacka">Hackathon ENSSAT</a> and my 2nd year at the <a href="http://www.enssat.fr/">ENSSAT Lannion</a>. I am really proud to have contribute to it and of the success of this edition.
+	    		</p>
+	    	<h3>Link to some article about the project :</h3>
+	    	<ul>
+	    		<li>Article de <a href="https://www.ouest-france.fr/bretagne/lannion-22300/lannion-au-lycee-les-filles-font-parler-leur-science-6287822">Ouest France</a></li>
+	    		<li>Article du <a href="https://www.letelegramme.fr/cotes-darmor/lannion/ada-lovelace-des-nouveautes-pour-le-concours-20-03-2019-12237099.php">Télégramme</a></li>
+	    	</ul>
 
     	<h2 id="Hacka">Hackathon ENSSAT 2019</h2>
 
