--- a/project/index.html
+++ b/project/index.html
@@ -5,17 +5,22 @@ title: Cyril MOINEAU
 	<div class="blurb">
 		<h1>My projects</h1>
 
+		<p>
+			In this page you will find different project in which I take part. I have been a member of various projects during my scolarity, some project revolving arround computer science, but also others about my passions such as video games.
+		</p>
+
 		<h2>Summary</h2>
 		<ul>
-    		<li><a href="#Ada">Ada Lovelace 2019</a></li>
-    		<li><a href="#Hacka">Hackathon ENSSAT 2019</a></li>
-        	<li><a href="#F4G">F4G 2018</a></li>
-    		<li><a href="#GitHub">Projet GitHub</a></li>
+    		<li><a href="#Ada">Ada Lovelace & Hackathon ENSSAT  2019</a></li>
+        	<li><a href="#BomberBall">BomberBall</a></li>
     	</ul>
 
-    	<h2 id="Ada">Ada Lovelace (edition 2019)</h2>
+    	<h2 id="Ada">Ada Lovelace & Hacakthon ENSSAT (2019)</h2>
+    		<p>
+    			During my 2nd year at the ENSSAT, I worked on two sides project, with the same team of student. These projects where about programming challenge for students. You will find above a description of both project, followed by my participation in them.
+    		</p>
 
-	    	<h3>Description of the projet :</h3>
+	    	<h3>Description of the projet Ada Lovelace :</h3>
 	    		<p>
 	    			The <a href="https://adalovelace.ledantec-numerique.fr/">challenge Ada Lovelace</a> is an computer science challenge where girls from high school have to create a web site around a topic in a group of 4-5.
 	    			This is project aim to promote the place of women in the numeric world, which is often consider to be man only has shown by statistics :
@@ -31,39 +36,47 @@ title: Cyril MOINEAU
 					In order to change things, the <a href="http://lycee-ledantec.fr/">Lycée Le Dantec</a>, the <a href="http://www.enssat.fr/">ENSSAT</a>, <a href="https://www.orange.fr/portail">Orange</a> and <a href="http://www.ellesbougent.com/">Elles Bougent</a> decide to create this event to touch young girls and give them a good first experience of the numeric world. 
 				</p>
 				<p>
-					To achieve this goal, groups are helped by women who are in higher study, this help is mandatory since the schoolgirl have no notion in web. But the tutor also give them an example of woman that work in the numeric, which can break stereotypes.
+					To achieve this goal, groups are helped by women who are in higher study, this help is mandatory since the schoolgirl have no notion in web. But the tutor also give them an example of women that work in the numeric, which can break stereotypes.
 				</p>
 
+			<h3>Description of the projet Hackathon ENSSAT :</h3>
 
-	    	<h3>My contribution to this project :</h3>
+			<p>
+				The Hackathon ENSSAT, is a programming competition, open for students. During this event, the participants have to propose a solution around a thematic, in a limited time of 24 hours. They are in a team of 5 and have to make a small presentation at the end of the 24th hour. The students are evaluated by a professional jury, both from the indistrual and laboratory field. The goal of this competition is to help student improve themselves by putting them in an extrem situation ("only" 24 hours). And to give them a good moment arround their passion for programming. 
+			</p>
+
+
+	    	<h3>My contribution to these projects :</h3>
 
 	    		<p>
 	    			As a student at <a href="http://www.enssat.fr/">ENSSAT Lannion</a>, I have the opportunitie to participate to projects that aim to create the student life. I have been the coordinator of this project. As explained above, this project have a lot of actors, my goal was to coordinate these actors in order to create a good challenge for the students.
 	    		</p>
 	    		<p>
-	    			For this, I had to manage the student team and help them, I have participate in the creation of the budget for the event, to the sponsoring research and some logistic details. But I also had to work with the others actor and communicate with them, organizing meeting.
+	    			For this, I had to manage the student team and help them, I have participate in the creation of the budget for the event, to the sponsoring research and some logistic details. But I also had to work with the others actor and communicate with them, organizing meeting. I had to coordinate the search for sponsor, the logistic and the communication of the event. This lead me to the organization of meeting, resolution of conflict
 	    		</p>
 	    		<p>
-	    			This project is the first one that made me work with so many differents person, it was really challenging to do it along side with the <a href="#Hacka">Hackathon ENSSAT</a> and my 2nd year at the <a href="http://www.enssat.fr/">ENSSAT Lannion</a>. I am really proud to have contribute to it and of the success of this edition.
+	    			The Ada Lovelace project was my first experience with so many partners, it was a good experience in working and coordinating people who are far from each other.
 	    		</p>
-	    	<h3>Link to some article about the project :</h3>
+
+	    	<h3>Link to some article about the challenge Ada Lovelace :</h3>
 	    	<ul>
-	    		<li>Article de <a href="https://www.ouest-france.fr/bretagne/lannion-22300/lannion-au-lycee-les-filles-font-parler-leur-science-6287822">Ouest France</a></li>
-	    		<li>Article du <a href="https://www.letelegramme.fr/cotes-darmor/lannion/ada-lovelace-des-nouveautes-pour-le-concours-20-03-2019-12237099.php">Télégramme</a></li>
+	    		<li>Article from <a href="https://www.ouest-france.fr/bretagne/lannion-22300/lannion-au-lycee-les-filles-font-parler-leur-science-6287822">Ouest France</a></li>
+		    	<li>Article from the <a href="https://www.letelegramme.fr/cotes-darmor/lannion/ada-lovelace-des-nouveautes-pour-le-concours-20-03-2019-12237099.php">Télégramme</a></li>
 	    	</ul>
+			
+	    	<h3>Link to some article about the Hackathon :</h3>
+		    	<ul>
+		    		<li>Article from <a href="https://www.ouest-france.fr/bretagne/lannion-22300/six-equipes-au-marathon-du-code-hackathon-6267065">Ouest France</a></li>
+	    			<li>Article from the <a href="https://www.letelegramme.fr/cotes-darmor/lannion/hackathon-une-appli-au-bout-de-la-nuit-18-03-2019-12235588.php">Télégramme</a></li>
+		    		
+		    	</ul>
 
-    	<h2 id="Hacka">Hackathon ENSSAT 2019</h2>
-
-			<h3>Description of the projet :</h3>
-
-	    	<h3>My contribution in this project :</h3>
-    	
-    	<h2 id="F4G">Fest 4 Games 2018</h2>
-
-			<h3>Description of the projet :</h3>
-
-	    	<h3>My contribution in this project :</h3>
-
-    	<h2 id="GitHub">Projet GitHub</h2>
-
+    	<h2 id="BomberBall">Projet BomberBall</h2>
+    		<p>
+    			The project Bomber Ball was a hudge project in courses of software engineering. During this project we were roll playing a company and the professor were playing client. 
+    			During this project we respond to a call for tender, and create various meeting with the fictive company in order to respond to their demand. The company wanted to create a video game similar to the Bomber Man. For siplicity purposes we had to code the game in Java since it was the language we used the most in the second year at the ENSSAT.
+    		</p>
+    		<h3>The result :</h3>
+    			<p>You can see the results on my github account <a href="https://github.com/cmoineau/GL-BomberBall">here</a>.
+    			</p>
 	</div><!-- /.blurb -->
