Adding a small presentation of myself.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,21 @@ layout: default
 title: Cyril MOINEAU
 ---
 	<div class="blurb">
-		<h1>Hi there, I'm Cyril MOINEAU !</h1>
-		<p>Here is my personnal web site ! It's under construction !</p>
+		<h1>Cyril MOINEAU</h1>
+			<img src="/ressources/Cyril.png" alt="A photo of me" width="150" height="150" style="float:right;">
+			
+			<h2>Who am I ?</h2>
+			<p>
+				I am a French engineer student in computer science born in 1997. I am keen on new technologies and I like physics. Since my preparatory class I have been curious about the world of research. I want to have a meaningful work, and I am passionate of researching a solution to a problem. For these reasons I want to work for the research in a company. And why noy
+			</p>
+
+			<h2>My actuality</h2>
+			<p>
+				I am currently studying at the <a href="http://www.enssat.fr/">ENSSAT Lannion</a> a french engineer school. This year I am also doing a second diploma arround the research in computer science at <a href="https://www.univ-rennes1.fr/">the Univerity of Rennes</a>. 
+				I am looking for an internship in a laboratory for the period of February to June.
+			</p>
+
+			<h2>My scholar career</h2>
+
+			<br>TODO</br>
 	</div><!-- /.blurb -->
