--- a/project/index.html
+++ b/project/index.html
@@ -74,7 +74,7 @@ title: Cyril MOINEAU
     	<h2 id="BomberBall">Projet BomberBall</h2>
     		<p>
     			The project Bomber Ball was a hudge project in courses of software engineering. During this project we were roll playing a company and the professor were playing client. 
-    			During this project we respond to a call for tender, and create various meeting with the fictive company in order to respond to their demand. The company wanted to create a video game similar to the Bomber Man. For siplicity purposes we had to code the game in Java since it was the language we used the most in the second year at the ENSSAT.
+    			During this project we respond to a call for tender, and create various meeting with the fictive company in order to respond to their demand. The company wanted to create a video game similar to the Bomber Man. For simplicity purposes we had to code the game in Java since it was the language we used the most in the second year at the ENSSAT.
     		</p>
     		<h3>The result :</h3>
     			<p>You can see the results on my github account <a href="https://github.com/cmoineau/GL-BomberBall">here</a>.
