Adding link for a french translation of the web site.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Cyril MOINEAU
 ---
 	<div class="blurb">
 		<h1>Cyril MOINEAU</h1>
-			<img src="/ressources/Cyril.png" alt="A photo of me" width="150" height="150" style="float:right;">
+			<img src="/ressources/Cyril.jpg" alt="A photo of me" width="150" height="150" style="float:right;">
 			
 			<h2>Who am I ?</h2>
 			<p>
