--- a/index.html
+++ b/index.html
@@ -3,21 +3,114 @@ layout: default
 title: Cyril MOINEAU
 ---
 	<div class="blurb">
+		<div id="presentation">
+		<img src="/ressources/Cyril.jpg" alt="A photo of me"  style="float:right; width: 140px; height: 169px; margin-left: 30px; margin-right: 15%; border-radius: 5%; box-shadow: 2px 0px 6px black;">
 		<h1>Cyril MOINEAU</h1>
-			<img src="/ressources/Cyril.jpg" alt="A photo of me" width="150" height="150" style="float:right;">
-			
+		</div>
 			<h2>Who am I ?</h2>
 			<p>
-				I am a French engineer student in computer science born in 1997. I am keen on new technologies and I like physics. Since my preparatory class I have been curious about the world of research. I want to have a meaningful work, and I am passionate of researching a solution to a problem. For these reasons I want to work for the research in a company. And why noy
+				I am a French engineer student in computer science born in 1997. I am found of new technologies and I like physics. Since my preparatory class, I have been curious about the world of research. I want to know what I am working for, and I am passionate of researching a solution to a problem. For these reasons I want to work for the research in a company.
 			</p>
 
 			<h2>My actuality</h2>
 			<p>
-				I am currently studying at the <a href="http://www.enssat.fr/">ENSSAT Lannion</a> a french engineer school. This year I am also doing a second diploma arround the research in computer science at <a href="https://www.univ-rennes1.fr/">the Univerity of Rennes</a>. 
-				I am looking for an internship in a laboratory for the period of February to June.
+				I am currently studying at the <a href="http://www.enssat.fr/">ENSSAT Lannion</a> a french engineer school. This year I am also preparing a second diploma in research in computer science at the <a href="https://www.univ-rennes1.fr/">Univerity of Rennes</a>. 
+				I am looking for an internship in a laboratory for the period of February to June in the field of machine learning or data science.
 			</p>
 
 			<h2>My scholar career</h2>
+			<p>
+				You will find here the technical courses I have been following during my scholarship.
+			<h3>M2SIF Rennes 1 (2019-2020)</h3>
+					<ul>
+						<li>Data mining and visualisation</li>
+						<li>Data analysis and probabilistic modeling</li>
+						<li>Writting of scientific publications</li>
+					</ul>
 
-			<br>TODO</br>
+				<h3>ENSSAT (2017-2020)</h3>
+					<ul>
+						<li><strong>Mathématics :</strong>
+							<ul>
+								<li>Mathematical logic</li>
+								<li>Analysis</li>
+								<li>Algebra</li>
+								<li>Continuous and discrete analysis</li>
+								<li>Probability</li>
+								<li>Statistics</li>
+								<li>Theory of queues</li>
+								<li>Cryptography</li>
+							</ul>
+						<li><strong>Computer science :</strong>
+							<ul>
+								<li>Network</li>
+								<li>Operating System</li>
+								<li>Basis of C</li>
+								<li>Basis of Java</li>
+								<li>Algorithmics</li>
+								<li>Data structure</li>
+								<li>Object Programing</li>
+								<li>Software engineering</li>
+								<li>Real time</li>
+								<li>Distributed algorithms</li>
+								<li>Unix programming</li>
+								<li>Relational Databases</li>
+								<li>Advanced Databases</li>
+								<li>Theory of Languages and Compilation</li>
+								<li>Computability</li>
+								<li>Client / Server Web Programming</li>
+								<li>Web Services</li>
+								<li>Security of software systems</li>
+								<li>Declarative and functionnal programming</li>
+								<li>Advanced Databases (fuzzy logic)</li>
+								<li>Machine learning</li>
+								<li>Web Data Management</li>
+								<li>Massive data mining and analysis</li>
+								<li>Automatic processing of languages and speech</li>
+							</ul>
+						<li><strong>Electronics :</strong>
+							<ul>
+								<li>Microcontrollers</li>
+								<li>Basic digital systems</li>
+							</ul>
+					</ul>
+
+					<h3>Preparatory classes (2015-2017)</h3>
+					<p>
+						I have studied in afrench preparatory class from 2015-2017. You will find detail program of the lessons I have been following (in french) <a href='https://www.optimalsupspe.fr/pc/'>here</a>.
+					</p>
+					<ul>
+						<li><strong>Mathematics :</strong></li>
+							<ul>
+								<li>Linear algebra</li>
+								<li>Normed vectorial space in finite dimension</li>
+								<li>Euclidean space</li>
+								<li>Vector function and parametric equation of the curve</li>
+								<li>Probability</li>
+								<li>Diffential calculus</li>
+							</ul>
+						<li><strong>Physics :</strong></li>
+							<ul>
+								<li>Non-linear optics</li>
+								<li>Electromagnetism</li>
+								<li>Mechanic</li>
+								<li>Thermodynamic</li>
+								<li>Wave physics</li>
+							</ul>
+						<li><strong>Chemistry :</strong></li>
+							<ul>
+								<li>Mixtures and transformations: thermodynamic aspects</li>
+								<li>Chemical energy and electrical energy: conversion and storage</li>
+								<li>Atoms, molecules, complexes: quantum modeling and reactivity</li>
+								<li>Molecules and organic materials: synthesis strategy and applications</li>
+							</ul>
+						<li><strong>Computer science :</strong></li>
+							<ul>
+								<li>Introduction to Python</li>
+								<li>Introduction to data base (mySQL)</li>
+								<li>Physic modelistation</li>
+								<li>Recursive programming</li>
+							</ul>
+	    		</ul>
+			</p>
 	</div><!-- /.blurb -->
