--- a/internship/index.html
+++ b/internship/index.html
@@ -4,5 +4,12 @@ title: Cyril MOINEAU
 ---
 	<div class="blurb">
 		<h1>My work experiences</h1>
-		<p>You will find here the different experiences I had in the world of work :</p>
+		<h2>Summary :</h2>
+		<ul>
+			<li><a href="#NCTU">Internship at the NCTU 2019</a></li>
+    		<li><a href="#Metropole">Orléans Métropole 2018</a></li>
+    	</ul>
+    	<h2 id="NCTU">Internship at the NCTU 2019</h2>
+
+    	<h2 id="Metropole">Orléans Métropole 2018</h2>
 	</div><!-- /.blurb -->
