--- a/project/index.html
+++ b/project/index.html
@@ -76,7 +76,10 @@ title: Cyril MOINEAU
     			The project Bomber Ball was a hudge project in courses of software engineering. During this project we were roll playing a company and the professor were playing client. 
     			During this project we respond to a call for tender, and create various meeting with the fictive company in order to respond to their demand. The company wanted to create a video game similar to the Bomber Man. For simplicity purposes we had to code the game in Java since it was the language we used the most in the second year at the ENSSAT.
     		</p>
+    		
     		<h3>The result :</h3>
-    			<p>You can see the results on my github account <a href="https://github.com/cmoineau/GL-BomberBall">here</a>.
+    			<p>You can see the project on my github account <a href="https://github.com/cmoineau/GL-BomberBall">here</a>.
+    			And here you can watch a small video we made to show the result during the final presentation :
+    			<iframe class="center" width="600" height="300" src="https://www.youtube.com/embed/a_426RiwST8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     			</p>
 	</div><!-- /.blurb -->
