--- a/internship/index.html
+++ b/internship/index.html
@@ -10,6 +10,36 @@ title: Cyril MOINEAU
     		<li><a href="#Metropole">Orléans Métropole 2018</a></li>
     	</ul>
     	<h2 id="NCTU">Internship at the NCTU 2019</h2>
+    		<h3>Description of the internship :</h3>
+    		<p>
+    			During the summer 2019, I spend 2 months at the <a href="https://www.nctu.edu.tw/en/">National Chiao Tung University</a> (NCTU) in the <a href="http://soc.ee.nctu.edu.tw/">Intelligent Electronics and System-On-Chip</a> (IESOC) laboratory.
+    		</p>
+
+    		<p>
+    			During this 2 months, I have worked on detecting emotion using ECG (Electrocardiogram) and PPG (Photoplethysmogram) signals. For this I used CNN (convolutional neuronnal network) with the library <a href="https://keras.io/">Keras</a> (v2.24). This also made me work on problematic such as peak detection and real time implementation. Indeed, at the end of the internship I had to implement my CNN on the <a href="https://developer.nvidia.com/embedded/jetson-nano-developer-kit">JetSon Nano board</a>. 
+    		</p>
+    		<p>
+    			With the result I have acquired, I have been proposed to write an article for the ISCAS conference, the paper is currently under redaction.
+    		</p>
+
+    		<h3>Conclusion :</h3>
+    		<p>
+    			This internship was a very good first experience of the world of research. I can't thanks enought the people that welcome me at the NCTU and made this two months such a good experience. I have been able to understand difficulties of working in a research laboratory. Even if the thematic was not on the scope of what I have done at school, I was really eager to learn. This two months definetly confirm my desire to do research.
+    		</p>
+
 
     	<h2 id="Metropole">Orléans Métropole 2018</h2>
+    	    <h3>Description of the internship :</h3>
+    		<p>I spend 2 months during the summer 2018 at the <a href="http://www.orleans-metropole.fr/">Orléans Métropole</a> at the Information Systems Division (ISD). During this summer, I work on two different topics.
+    		</p>
+    		<p>
+    			Establishement of a supervision using the <a href="https://www.centreon.com/en/solutions/centreon/">OS Centreon</a>. I arrived during the fusion between the services of every ISD of the metropole. In this contexte, the ISD of Orléans decided to upgrade their supervision services. During this internship I have been able to witness a real network. I have learned many things about network and virtualization.
+    		</p>
+			<p>
+    			The other topic was the management of the Active Directory (AD). Due to some bad practice, the AD has a lot of user who are supposed to be gone. This project was really interresting since I had to create a way to detect users who aren't supposed to have an active directory with the information given by the AD. For this I used Power Shell script.
+    		</p>
+    		<h3>Conclusion :</h3>
+    		<p>
+    			This was my first technical internship. I learned a lot, and I had the opportunity of been given responsabilities. Especially for the cleaning of the AD, where a mistake could have lead to the supression of the account of someone working.  
+    		</p>
 	</div><!-- /.blurb -->
