--- a/index.html
+++ b/index.html
@@ -9,18 +9,17 @@ title: Cyril MOINEAU
 		</div>
 			<h2>Who am I ?</h2>
 			<p>
-				I am a French engineer student in computer science born in 1997. I am found of new technologies and I like physics. Since my preparatory class, I have been curious about the world of research. I want to know what I am working for, and I am passionate of researching a solution to a problem. For these reasons I want to work for the research in a company.
+				I am a French engineer student in computer science born in 1997. I am found of new technologies and I like physics. Since my preparatory class, I have been curious about the world of research. I want to know what I am working for, and I am passionate about researching a solution to a problem. For these reasons, I want to work in private research.
 			</p>
 
-			<h2>My actuality</h2>
+			<h2>Currently</h2>
 			<p>
-				I am currently studying at the <a href="http://www.enssat.fr/">ENSSAT Lannion</a> a french engineer school. This year I am also preparing a second diploma in research in computer science at the <a href="https://www.univ-rennes1.fr/">Univerity of Rennes</a>. 
-				I am looking for an internship in a laboratory for the period of February to June in the field of machine learning or data science.
+				I am studying at <a href="http://www.enssat.fr/">ENSSAT Lannion</a>, a French engineer school. Parallely, I am also preparing a second diploma in research in computer science at the <a href="https://www.univ-rennes1.fr/">Univerity of Rennes</a>. 
+				I am looking for an internship in a laboratory from February to June in the field of machine learning or data science.
 			</p>
 
-			<h2>My scholar career</h2>
+			<h2>Courses taken</h2>
 			<p>
-				You will find here the technical courses I have been following during my scholarship.
 			<h3>M2SIF Rennes 1 (2019-2020)</h3>
 					<ul>
 						<li>Data mining and visualisation</li>
@@ -30,7 +29,7 @@ title: Cyril MOINEAU
 
 				<h3>ENSSAT (2017-2020)</h3>
 					<ul>
-						<li><strong>Mathématics :</strong>
+						<li><strong>Mathematics :</strong>
 							<ul>
 								<li>Mathematical logic</li>
 								<li>Analysis</li>
@@ -77,7 +76,7 @@ title: Cyril MOINEAU
 
 					<h3>Preparatory classes (2015-2017)</h3>
 					<p>
-						I have studied in afrench preparatory class from 2015-2017. You will find detail program of the lessons I have been following (in french) <a href='https://www.optimalsupspe.fr/pc/'>here</a>.
+						I studied in a French preparatory class from 2015-2017. You can find the syllabus here <a href='https://www.optimalsupspe.fr/pc/'> in French</a>.
 					</p>
 					<ul>
 						<li><strong>Mathematics :</strong></li>
