--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Cyril MOINEAU
 
 			<h2>Currently</h2>
 			<p>
-				I am studying at <a href="http://www.enssat.fr/">ENSSAT Lannion</a>, a French engineer school. Parallely, I am also preparing a second diploma in research in computer science at the <a href="https://www.univ-rennes1.fr/">Univerity of Rennes</a>. 
+				I am studying at <a href="http://www.enssat.fr/">ENSSAT Lannion</a>, a French engineer school. Parallely, I am also preparing a second diploma in research in computer science at the <a href="https://www.univ-rennes1.fr/">University of Rennes</a>. 
 				I am looking for an internship in a laboratory from February to June in the field of machine learning or data science.
 			</p>
 
