--- a/internship/index.html
+++ b/internship/index.html
@@ -36,7 +36,7 @@ title: Cyril MOINEAU
     			1. Establishement of a supervision using the <a href="https://www.centreon.com/en/solutions/centreon/">OS Centreon</a>. I arrived during the fusion between the services of every ISD of the metropole. In this contexte, the ISD of Orléans decided to upgrade their supervision services. During this internship I have been able to witness a real network. I have learned many things about network and virtualization.
     		</p>
 			<p>
-    			2. Management of the Active Directory (AD). Due to some bad practices, the AD has a lot of users who are supposed to be gone. This project was really interresting since I had to create a way to detect users who aren't supposed to have an active directory with the information given by the AD. For this I used Power Shell script.
+    			2. Management of the Active Directory (AD). The AD has a lot of users who were supposed to be gone. This project was really interresting since I had to create a way to detect users who aren't supposed to have an active directory with the information given by the AD. For this I used Power Shell script.
     		</p>
     		<h3>Conclusion :</h3>
     		<p>
