--- a/project/index.html
+++ b/project/index.html
@@ -15,7 +15,7 @@ title: Cyril MOINEAU
     			During my 2nd year at ENSSAT, I worked on two projects with the same team of students. These projects revolved around fulfilling a challenge in programming. Bellow, you will find a description of both projects followed by an explanation of my part in them.
     		</p>
 
-	    	<h3>Description of the projet Ada Lovelace :</h3>
+	    	<h3>Description of the project Ada Lovelace :</h3>
 	    		<p>
 	    			<a href="https://adalovelace.ledantec-numerique.fr/">The Ada Lovelace challenge</a> is a computer science challenge in which highschool girls have to create a web site about a topic in a group of 4-5.
 	    			This project aims at promoting the place of women in the numeric world, which mostly represented by men as shown by statistics :
@@ -68,13 +68,14 @@ title: Cyril MOINEAU
 
     	<h2 id="BomberBall">Projet BomberBall</h2>
     		<p>
-    			Bomber Ball project was an important project for software engineering courses. During this project, we were role playing a company and the professor was playing the client. 
+    			Bomber Ball project was an important project for software engineering courses. During this project, we were role playing a company and the professors were playing the client. 
     			During this project we respond to a call for tender, and create various meetings with our fictive company in order to respond to the fictive client's demand. The company wanted to create a video game similar to the Bomber Man. We had to code the game in Java since it was the language we used the most in junior year at ENSSAT.
     		</p>
     		
     		<h3>The result :</h3>
     			<p>You can see the project on my github account <a href="https://github.com/cmoineau/GL-BomberBall">here</a>.
     			And here you can watch a small video we made to show the result during the final presentation :
-    			<iframe class="center" width="600" height="300" src="https://www.youtube.com/embed/a_426RiwST8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    			<iframe class="center" width="600" height="300" src="https://www.youtube.com/embed/0CLnEmHGonU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     			</p>
 	</div><!-- /.blurb -->
