--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@ title: Cyril MOINEAU
 		</div>
 			<h2>Who am I ?</h2>
 			<p>
-				I am a French engineer student in computer science born in 1997. I am found of new technologies and I like physics. Since my preparatory class, I have been curious about the world of research. I want to know what I am working for, and I am passionate about researching a solution to a problem. For these reasons, I want to work in private research.
+				I am a French engineer student in computer science born in 1997. Since my preparatory class, I have been curious about the world of research. I want to know what I am working for, and I am passionate about researching a solution to a problem. 
+				</br>
+				Due to my formation as an engineer, I also want to work for a company. This is why I would like to do applied research.
+				</br>
+				I am interrested in the field of machine learning and data mining. But I am also found of physic and I love to learn new things !
 			</p>
 
 			<h2>Currently</h2>
 			<p>
-				I am studying at <a href="http://www.enssat.fr/">ENSSAT Lannion</a>, a French engineer school. Parallely, I am also preparing a second diploma in research in computer science at the <a href="https://www.univ-rennes1.fr/">University of Rennes</a>. 
-				I am looking for an internship in a laboratory from February to June in the field of machine learning or data science.
+				I am studying at <a href="http://www.enssat.fr/">ENSSAT Lannion</a>, a French engineer school. Parallely, I am also preparing a second diploma in research in computer science at the <a href="https://www.univ-rennes1.fr/">University of Rennes 1</a>.
 			</p>
 
 			<h2>Courses taken</h2>
