--- a/project/index.html
+++ b/project/index.html
@@ -12,7 +12,7 @@ title: Cyril MOINEAU
 
     	<h2 id="Ada">Ada Lovelace & Hacakthon ENSSAT (2019)</h2>
     		<p>
-    			During my 2nd year at ENSSAT, I worked on two projects with the same team of students. These projects revolved around fulfilling a challenge in programming. Bellow, you will find a description of both projects followed by an explanation of my part in them.
+    			During my 2nd year at <a href="http://www.enssat.fr/">ENSSAT</a>, I worked on two projects with the same team of students. These projects revolved around fulfilling a challenge in programming. Bellow, you will find a description of both projects followed by an explanation of my part in them.
     		</p>
 
 	    	<h3>Description of the project Ada Lovelace :</h3>
@@ -44,10 +44,10 @@ title: Cyril MOINEAU
 	    	<h3>My contribution to these projects :</h3>
 
 	    		<p>
-	    			As a student at <a href="http://www.enssat.fr/">ENSSAT Lannion</a>, these projects gave me the opportunity to galvanise the student life. I have been the coordinator of these projects. As explained above, these projects have a lot of actors, my goal was to coordinate these actors in order to create an enjoyable and interesting challenge for the students.
+	    			As a student at <a href="http://www.enssat.fr/">ENSSAT Lannion</a>, these projects gave me the opportunity to galvanise the student life. I have been the coordinator of these projects. As explained above, the Ada Lovelace project have a lot of actors, my goal was to coordinate these actors in order to create an enjoyable and interesting challenge for the students.
 	    		</p>
 	    		<p>
-	    			For this, I had to manage the student team and help them; I had participate in the creation of the budget for the event, to the sponsoring research and in managing some logistic details. I also had to work with the others actors, communicate with them, managing conflicts and organizing our meetings. I had to coordinate the search for sponsors and design the communication strategy.
+	    			But not only, I had to manage the student team for both projects and help them; I had participate in the creation of the budget for the event, to the sponsoring research and in managing some logistic details. I also had to work with the others actors, communicate with them, managing conflicts and organizing our meetings. I had to coordinate the search for sponsors and design the communication strategy.
 	    		</p>
 	    		<p>
 	    			The Ada Lovelace project was my first experience with so many partners, it was a good experience in working and coordinating people who are far from each other.
