Adding the index translation in french.x

--- a/fr/index.html
+++ b/fr/index.html
@@ -3,5 +3,118 @@ layout: french
 title: Cyril MOINEAU
 ---
 	<div class="blurb">
-		<h1>Bientôt ...</h1>
+		<div id="presentation">
+		<img src="/ressources/Cyril.jpg" alt="A photo of me"  style="float:right; width: 140px; height: 169px; margin-left: 30px; margin-right: 15%; border-radius: 5%; box-shadow: 2px 0px 6px black;">
+		<h1>Cyril MOINEAU</h1>
+		</div>
+			<h2>Qui suis je ?</h2>
+			<p>
+				Je suis un élève ingénieur en informatique français née en 1997. J'ai développé un intérêt pour le monde de la recherche depuis que je suis en classe préparatoire. Je veux que mon travail soit utile et je suis passioné par la recherche de solution.
+				</br>
+				De part ma formation d'ingénieur, je veux travailler plutôt en entreprisé et m'orienter vers de la recherche appliqué.
+				</br>
+				Je suis passioné par l'apprentissage automtique et l'exploration de donnée. Mais je suis aussi interresé par la physique et je suis curieux.			
+			</p>
+
+			<h2>Actuellement</h2>
+			<p>
+
+				J'étudie à <a href="http://www.enssat.fr/">l'ENSSAT Lannion</a>, une école d'ingénieur Française. 
+				Parallèlement, je prépare aussi un second diplôme orienté vers la recherche en informatique à <a href="https://www.univ-rennes1.fr/">l'Université de Rennes 1</a>.
+			</p>
+
+			<h2>Listes des cours que j'ai suivis dans ma scolarité :</h2>
+			<p>
+			<h3>M2SIF Rennes 1 (2019-2020)</h3>
+					<ul>
+						<li>Fouille de donnée massive et visualisation</li>
+						<li>Analyse de donnée et modélisation probabilistique</li>
+						<li>Rédaction d'article scientifique</li>
+					</ul>
+
+				<h3>ENSSAT (2017-2020)</h3>
+					<ul>
+						<li><strong>Mathematiques :</strong>
+							<ul>
+								<li>Logique Mathématiques</li>
+								<li>Analyse</li>
+								<li>Algébre</li>
+								<li>Analyse discréte en continue</li>
+								<li>Probabilité</li>
+								<li>Statistiques</li>
+								<li>Theorie des files d'attente</li>
+								<li>Cryptographie</li>
+							</ul>
+						<li><strong>Informatique :</strong>
+							<ul>
+								<li>Réseaux</li>
+								<li>Système d'exploitation</li>
+								<li>Bases de C</li>
+								<li>Bases de Java</li>
+								<li>Algorithmique</li>
+								<li>Structure de donnée</li>
+								<li>Programmation objet</li>
+								<li>Génie logiciel</li>
+								<li>Temps réel</li>
+								<li>Algorithme distribué</li>
+								<li>Programmation Unix</li>
+								<li>Base de donnée relationel</li>
+								<li>Base de donnée avancé (logique floue)</li>
+								<li>Théorie des langages et compilation</li>
+								<li>Calculabilité</li>
+								<li>Programmation web Client / Serveur</li>
+								<li>Services Web</li>
+								<li>Securité des systèmes logiciel</li>
+								<li>Porgrammation déclarative et fonctionnel</li>
+								<li>Apprentissage Automatique</li>
+								<li>Web Data Management</li>
+								<li>Analyse et fouille de donnée massive</li>
+								<li>Traitement automatique du langage et de la parole</li>
+							</ul>
+						<li><strong>Electronique :</strong>
+							<ul>
+								<li>Micro-controleurs</li>
+								<li>Bases des systèmes  numérique</li>
+							</ul>
+					</ul>
+
+					<h3>Classes préparatoire (2015-2017)</h3>
+					<p>
+						J'ai étudié dans une classe préparatoire français de 2015-2017. Vous pourrez trouver le programme détaillé que j'ai trouvé <a href='https://www.optimalsupspe.fr/pc/'>ici</a>.
+					</p>
+					<ul>
+						<li><strong>Mathematiques :</strong></li>
+							<ul>
+								<li>Algèbre linéaire</li>
+								<li>Espace vecotriel normée en dimension finis</li>
+								<li>Espace Euclidien</li>
+								<li>Fonction vectorielles et arcs paramétrés</li>
+								<li>Probabilité</li>
+								<li>Calcul différentiel</li>
+							</ul>
+						<li><strong>Physique :</strong></li>
+							<ul>
+								<li>Optique non linéaire</li>
+								<li>Éléctromagnetisme</li>
+								<li>Méchanique</li>
+								<li>Thermodynamique</li>
+								<li>Physique des ondes</li>
+							</ul>
+						<li><strong>Chimie :</strong></li>
+							<ul>
+								<li>Mélanges et transformations: aspects thermodynamiques</li>
+								<li>Énergie chimique et énergie électrique: conversion et stockage</li>
+								<li>Atomes, molécules, complexes: modélisation quantique et réactivité</li>
+								<li>Molécules et matériaux organiques : stratégies de synthèse et applications</li>
+							</ul>
+						<li><strong>Informatique :</strong></li>
+							<ul>
+								<li>Introduction à Python</li>
+								<li>Introduction aux base de donnée (mySQL)</li>
+								<li>Modélisation physique</li>
+								<li>Programation récursive</li>
+							</ul>
+	    		</ul>
+			</p>
 	</div><!-- /.blurb -->
+
