--- a/index.html
+++ b/index.html
@@ -57,14 +57,13 @@ title: Cyril MOINEAU
 								<li>Distributed algorithms</li>
 								<li>Unix programming</li>
 								<li>Relational Databases</li>
-								<li>Advanced Databases</li>
+								<li>Advanced Databases (fuzzy logic)</li>
 								<li>Theory of Languages and Compilation</li>
 								<li>Computability</li>
 								<li>Client / Server Web Programming</li>
 								<li>Web Services</li>
 								<li>Security of software systems</li>
 								<li>Declarative and functionnal programming</li>
-								<li>Advanced Databases (fuzzy logic)</li>
 								<li>Machine learning</li>
 								<li>Web Data Management</li>
 								<li>Massive data mining and analysis</li>
@@ -79,7 +78,7 @@ title: Cyril MOINEAU
 
 					<h3>Preparatory classes (2015-2017)</h3>
 					<p>
-						I studied in a French preparatory class from 2015-2017. You can find the syllabus here <a href='https://www.optimalsupspe.fr/pc/'> in French</a>.
+						I studied in a French preparatory class from 2015-2017. You can find the syllabus <a href='https://www.optimalsupspe.fr/pc/'>here</a>(in French).
 					</p>
 					<ul>
 						<li><strong>Mathematics :</strong></li>
