Adding a translation of the internship section.

--- a/internship/index.html
+++ b/internship/index.html
@@ -19,7 +19,7 @@ title: Cyril MOINEAU
     			During these 2 months, I have worked on detecting emotion using ECG (Electrocardiogram) and PPG (Photoplethysmogram) signals. For this I used CNN (convolutional neuronnal network) with the library <a href="https://keras.io/">Keras</a> (v2.24). This also made me work on issues such as peak detection and real time implementation. Indeed, at the end of the internship I had to implement my CNN on the <a href="https://developer.nvidia.com/embedded/jetson-nano-developer-kit">JetSon Nano board</a>. 
     		</p>
     		<p>
-    			Eventually, I have been proposed to write an article for the ISCAS conference. The paper is being written.
+    			Eventually, I have been proposed to write an article for the <a href="https://www.iscas2020.org/">ISCAS conference</a>. The paper is being written.
     		</p>
 
     		<h3>Conclusion :</h3>
